@@ -11,6 +11,7 @@ import com.evolveum.polygon.conndev.groovy.GroovySchemaLoader;
 import com.evolveum.polygon.scimrest.config.ScimClientConfiguration;
 import com.evolveum.polygon.scimrest.groovy.connector.AbstractGroovyRestConnector;
 import com.evolveum.polygon.scimrest.groovy.handler.GroovyRestHandlerBuilder;
+import com.evolveum.polygon.conndev.groovy.GroovyScriptLoader;
 import com.evolveum.polygon.scimrest.support.WireMockTestSupport;
 import com.github.tomakehurst.wiremock.verification.LoggedRequest;
 import org.identityconnectors.common.security.GuardedString;
@@ -33,7 +34,6 @@ import java.util.List;
 import java.util.Set;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
-import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static com.github.tomakehurst.wiremock.client.WireMock.getRequestedFor;
 import static com.github.tomakehurst.wiremock.client.WireMock.post;
@@ -44,7 +44,6 @@ import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
-import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 
@@ -268,7 +267,7 @@ public class ScimFlattenComplexAttributesCrudTest extends WireMockTestSupport {
         }
     }
 
-    private static class TestConnector extends AbstractGroovyRestConnector<TestConfiguration> {
+    private static class TestConnector extends AbstractGroovyRestConnector {
 
         @Override
         protected void initializeSchema(GroovySchemaLoader loader) {
@@ -279,7 +278,7 @@ public class ScimFlattenComplexAttributesCrudTest extends WireMockTestSupport {
         }
 
         @Override
-        protected void initializeObjectClassHandler(GroovyRestHandlerBuilder builder) {
+        protected void initializeObjectClassHandler(GroovyScriptLoader builder) {
             builder.loadFromString(OPERATION_SCRIPT);
         }
     }
@@ -384,7 +383,7 @@ public class ScimFlattenComplexAttributesCrudTest extends WireMockTestSupport {
 
         var requests = wireMockServer.findAll(postRequestedFor(urlEqualTo(USERS_ENDPOINT)));
         assertEquals(requests.size(), 1, "exactly one create request expected");
-        var body = parse(requests.get(0));
+        var body = parse(requests.getFirst());
 
         // flat attributes are deflattened into the nested 'name' object
         assertEquals(body.at("/name/formatted").asText(), "John Doe");
@@ -423,7 +422,7 @@ public class ScimFlattenComplexAttributesCrudTest extends WireMockTestSupport {
 
         var requests = wireMockServer.findAll(putRequestedFor(urlEqualTo(USER_BY_ID_ENDPOINT)));
         assertEquals(requests.size(), 1, "exactly one update request expected");
-        var body = parse(requests.get(0));
+        var body = parse(requests.getFirst());
 
         assertEquals(body.at("/name/formatted").asText(), "Jane Doe");
         assertEquals(body.get("id").asText(), "1");
